# dandy-vr-remap

./: CMakeLists.txt  README.md
config/: actions.json  bindings_knuckles.json  tf2_binds.json
src/: actions.cpp  app.cpp  app.hpp  bind_config.cpp  bind_config.hpp  bindings.cpp  bindings.hpp  inputs.cpp  inputs.hpp  logic_parser.cpp  logic_parser.hpp  main.cpp  outputs.cpp  outputs.hpp  sphere_aim_controller.cpp  sphere_aim_controller.hpp  vr_device.cpp  vr_device.hpp
src/inputs/: inputs.cpp  inputs.hpp
src/mappings/: bind_config.cpp  bind_config.hpp  bindings.cpp  bindings.hpp  logic_parser.cpp  logic_parser.hpp  sphere_aim_controller.cpp  sphere_aim_controller.hpp
src/outputs/: outputs.cpp  outputs.hpp
src/vr/: actions.hpp  device.cpp  device.hpp
